Revert to previous Java methodology for collecting into a list